force-app/main/default/objects/Product_Distribution__c/Product_Distribution__c.object-meta.xml
<CustomObject>
    <description>Advisory Product Distribution</description>
    <label>Product Distribution</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Product Distribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>