force-app/main/default/objects/Product_Distribution__c/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <description>Actual Financial Close Date. SGPRT-624</description>
    <formula>Product__r.Opportunity__r.Actual_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Financial Close Date</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>