force-app/main/default/objects/Product_Distribution__c/fields/Advisory_Arranging_Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Arranging_Fee_bps__c</fullName>
    <description>Input Arranging and Advisory related fees including Underwrite fees for Unfunded Underwrite scenarios, expressed in bps.  SGPRT-624</description>
    <formula>Product__r.Advisory_Arranging_Fees_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Input Arranging and Advisory related fees including Underwrite fees for Unfunded Underwrite scenarios, expressed in bps.</inlineHelpText>
    <label>Advisory/ Arranging Fee (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>