force-app/main/default/objects/Product_Distribution__c/fields/All_Distribution_Parties__c.field-meta.xml
<CustomField>
    <fullName>All_Distribution_Parties__c</fullName>
    <description>Names of investors engaged for the portion of the sell down relating to the specific distribution method OR sellers engaged for the purchase
SGPRT-624</description>
    <inlineHelpText>Names of investors engaged for the portion of the sell down relating to the specific distribution method OR sellers engaged for the purchase</inlineHelpText>
    <label>All Distribution Parties</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>