force-app/main/default/objects/Product_Distribution__c/fields/All_Distribution_Parties_Status__c.field-meta.xml
<CustomField>
    <fullName>All_Distribution_Parties_Status__c</fullName>
    <description>Indicates the status of the potential sale with the Investor OR the status with the seller.
SGPRT-624</description>
    <inlineHelpText>Indicates the status of the potential sale with the Investor OR the status with the seller</inlineHelpText>
    <label>All Distribution Parties&apos; Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>