force-app/main/default/objects/Product_Distribution__c/fields/Approved_Hold__c.field-meta.xml
<CustomField>
    <fullName>Approved_Hold__c</fullName>
    <description>Difference between Notional SB (underwrite) and Mandated Sell Down value.</description>
    <formula>SB_Gross_Participation__c-Mandated_Sell_Down_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between Notional SB (underwrite) and Mandated Sell Down value.</inlineHelpText>
    <label>Approved Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>