force-app/main/default/objects/Product_Distribution__c/fields/Bank_Role__c.field-meta.xml
<CustomField>
    <fullName>Bank_Role__c</fullName>
    <description>Selection of SB&apos;s role and corresponding titles in the transaction. SGPRT-624</description>
    <inlineHelpText>Selection of SB&apos;s role and corresponding titles in the transaction.</inlineHelpText>
    <label>Bank Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>