force-app/main/default/objects/Product_Distribution__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <description>Selection of applicable reference rate as quoted to the client SGPRT-624</description>
    <formula>TEXT(Product__r.Base_Rate__c)</formula>
    <inlineHelpText>Selection of applicable reference rate as quoted to the client</inlineHelpText>
    <label>Base Rate</label>
    <type>Text</type>
</CustomField>