force-app/main/default/objects/Product_Distribution__c/fields/Cap_Guidance_Facility_Price__c.field-meta.xml
<CustomField>
    <fullName>Cap_Guidance_Facility_Price__c</fullName>
    <description>Pricing Ceiling Guidance given by Arranger for debt syndication expressed in %
SGPRT-624</description>
    <formula>Product__r.Cap_Guidance_Facility_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pricing Ceiling Guidance given by Arranger for debt syndication expressed in %</inlineHelpText>
    <label>Cap Guidance Facility Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>