force-app/main/default/objects/Product_Distribution__c/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <formula>TEXT(Product__r.Client__r.Client_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The primary sector in which the Client operates</inlineHelpText>
    <label>Client Sector</label>
    <type>Text</type>
</CustomField>