force-app/main/default/objects/Product_Distribution__c/fields/Country_of_Underlying_Risk__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Underlying_Risk__c</fullName>
    <formula>TEXT(Product__r.Country_of_Underlying_Risk__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select the country of underlying credit risk</inlineHelpText>
    <label>Country of Underlying Risk</label>
    <type>Text</type>
</CustomField>