force-app/main/default/objects/Product_Distribution__c/fields/DA_Level__c.field-meta.xml
<CustomField>
    <fullName>DA_Level__c</fullName>
    <label>DA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DA 1</fullName>
            </value>
            <value>
                <fullName>DA 2</fullName>
            </value>
            <value>
                <fullName>DA 3</fullName>
            </value>
            <value>
                <fullName>DA 4</fullName>
            </value>
            <value>
                <fullName>DA 5</fullName>
            </value>
            <value>
                <fullName>DA 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>