force-app/main/default/objects/Product_Distribution__c/fields/De_risking_Strategy__c.field-meta.xml
<CustomField>
    <fullName>De_risking_Strategy__c</fullName>
    <inlineHelpText>The strategy used for de-risking</inlineHelpText>
    <label>De-risking Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Arranging</fullName>
            </value>
            <value>
                <fullName>Primary Underwritten</fullName>
            </value>
            <value>
                <fullName>Secondary Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>