force-app/main/default/objects/Product_Distribution__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <description>Deal Status SGPRT-624</description>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Stage</fullName>
            </value>
            <value>
                <fullName>Financial Close Reached</fullName>
            </value>
            <value>
                <fullName>Pre-credit, Mandated</fullName>
            </value>
            <value>
                <fullName>Credit Approved, Mandated</fullName>
            </value>
            <value>
                <fullName>Credit Approved, No Mandate</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
                <isActive>false</isActive>
                <label>Credit Approved</label>
            </value>
            <value>
                <fullName>NBAC Approved</fullName>
                <isActive>false</isActive>
                <label>NBAC Approved</label>
            </value>
            <value>
                <fullName>Pre-NABC</fullName>
                <isActive>false</isActive>
                <label>Pre-NABC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>