force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amount__c</fullName>
    <description>The portion of the sell down that relates to the specific distribution method OR amount purchased 
SGPRT-624</description>
    <inlineHelpText>The portion of the sell down that relates to the specific distribution method OR amount purchased</inlineHelpText>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>