force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Amount_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amount_Achieved__c</fullName>
    <description>The value which has been successfully distributed using this distribution method OR value purchased to date. SGPRT-624</description>
    <inlineHelpText>The value which has been successfully distributed using this distribution method OR value purchased to date</inlineHelpText>
    <label>Distribution Amount Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>