force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Amount_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amount_in_Progress__c</fullName>
    <description>The value which is currently in the process of distribution using this distribution method OR value in process of purchase.  SGPRT-624</description>
    <inlineHelpText>The value which is currently in the process of distribution using this distribution method OR value in process of purchase.</inlineHelpText>
    <label>Distribution Amount in Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>