force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Centre__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Centre__c</fullName>
    <description>Where is the Distribution team member based? SGPRT-624</description>
    <inlineHelpText>Where is the Distribution team member based?</inlineHelpText>
    <label>Distribution Centre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Africa</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>West Africa</fullName>
            </value>
            <value>
                <fullName>Southern and Central Africa</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>