force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Comments__c</fullName>
    <inlineHelpText>Brief description of the transaction and a summary of the current status</inlineHelpText>
    <label>Distribution Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>