force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Mandate_Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Mandate_Achieved_Date__c</fullName>
    <description>Select date distribution mandate was achieved or permissibly discontinued.
SGPRT-624</description>
    <inlineHelpText>Select date distribution mandate was achieved or permissibly discontinued</inlineHelpText>
    <label>Distribution Mandate Achieved Date</label>
    <type>Date</type>
</CustomField>