force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <description>How will the Distribution be achieved?  SGPRT-624</description>
    <inlineHelpText>How will the Distribution be achieved?</inlineHelpText>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary syndication</fullName>
            </value>
            <value>
                <fullName>Syndication post Underwrite</fullName>
            </value>
            <value>
                <fullName>Outright Sale</fullName>
            </value>
            <value>
                <fullName>Outright Purchase</fullName>
            </value>
            <value>
                <fullName>Sub-part (funded)</fullName>
            </value>
            <value>
                <fullName>Sub-part (unfunded)</fullName>
            </value>
            <value>
                <fullName>CLN</fullName>
            </value>
            <value>
                <fullName>BDX</fullName>
            </value>
            <value>
                <fullName>Credit Risk Insurance (excl. PRI)</fullName>
            </value>
            <value>
                <fullName>Political Risk Insurance</fullName>
            </value>
            <value>
                <fullName>Full Credit Insurance (incl. PRI and CRI)</fullName>
            </value>
            <value>
                <fullName>Best Efforts</fullName>
                <isActive>false</isActive>
                <label>Best Efforts</label>
            </value>
            <value>
                <fullName>Hard</fullName>
                <isActive>false</isActive>
                <label>Hard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>