force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Period_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sell down period after mandate has been granted. SGPRT-624</description>
    <inlineHelpText>Sell down period after mandate has been granted.</inlineHelpText>
    <label>Distribution Period (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>