force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Pricing_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Pricing_Guidance__c</fullName>
    <description>Enter the guidance Distribution provided in relation to the facility margin (midpoint of range).
If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %.
If Preference Share: input the applicable % of Prime as quoted to client.
If Insurance: Weighted Average insurance premium in % 
SGPRT-624</description>
    <inlineHelpText>Enter the guidance Distribution provided in relation to the facility margin (midpoint of range).
If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %.
If Preference Share: input the applicable % of Prime as quoted to client.
If Insurance: Weighted Average insurance premium in %</inlineHelpText>
    <label>Distribution Pricing Guidance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>