force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Requirement_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Requirement_Provided_By__c</fullName>
    <description>Distribution Requirement Provided By 
SGPRT-624</description>
    <label>Distribution Requirement Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Risk</fullName>
            </value>
            <value>
                <fullName>Debt Solutions/Client Coverage</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>