force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Role__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Role__c</fullName>
    <description>Distribution Role 
SGPRT-624</description>
    <label>Distribution Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Arranger (Best Efforts)</fullName>
            </value>
            <value>
                <fullName>Underwriter (Funded)</fullName>
            </value>
            <value>
                <fullName>Underwriter (Unfunded)</fullName>
            </value>
            <value>
                <fullName>Secondary Trading</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>