force-app/main/default/objects/Product_Distribution__c/fields/Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Status__c</fullName>
    <description>Indicate the progress made in the distribution.  SGPRT-624</description>
    <inlineHelpText>Indicate the progress made in the distribution</inlineHelpText>
    <label>Distribution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Extension Provided</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>