force-app/main/default/objects/Product_Distribution__c/fields/Facility_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Facility_Pricing__c</fullName>
    <description>If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %.
If Preference Share: input the applicable % of Prime as quoted to client.  
SGPRT-624</description>
    <formula>Product__r.Facility_Pricing_Lending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol
If Fixed: input all-in fixed rate in %
If Preference Share: input the applicable % of Prime as quoted to client</inlineHelpText>
    <label>Facility Pricing (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>