force-app/main/default/objects/Product_Distribution__c/fields/Facility_Size__c.field-meta.xml
<CustomField>
    <fullName>Facility_Size__c</fullName>
    <description>The size of the facility that the client needs. Each facility required should be its own product. If the SB participation needs to be booked across multiple balance sheets, then the facility size should be split pro-rata into multiple products. SGPRT-1229</description>
    <formula>Product__r.Facility_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The size of the facility that the client needs. Each facility required should be its own product. If the SB participation needs to be booked across multiple balance sheets, then the facility size should be split pro-rata into multiple products.</inlineHelpText>
    <label>Facility Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>