force-app/main/default/objects/Product_Distribution__c/fields/Fee_skim_bps__c.field-meta.xml
<CustomField>
    <fullName>Fee_skim_bps__c</fullName>
    <label>Fee skim (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>