force-app/main/default/objects/Product_Distribution__c/fields/Fees_bps__c.field-meta.xml
<CustomField>
    <fullName>Fees_bps__c</fullName>
    <formula>Advisory_Arranging_Fee_bps__c +Underwrite_Fee_bps__c+Participation_Fee_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>