force-app/main/default/objects/Product_Distribution__c/fields/Form_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Sale__c</fullName>
    <inlineHelpText>Strategy which was used to achieve the sale.</inlineHelpText>
    <label>Form of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDX</fullName>
            </value>
            <value>
                <fullName>CLN</fullName>
            </value>
            <value>
                <fullName>Funded Subpart</fullName>
            </value>
            <value>
                <fullName>Issuer Trust</fullName>
            </value>
            <value>
                <fullName>Libfin Credit Fund</fullName>
            </value>
            <value>
                <fullName>Outright</fullName>
            </value>
            <value>
                <fullName>Portfolio Sale - Outright</fullName>
            </value>
            <value>
                <fullName>Stanlib Credit fund</fullName>
            </value>
            <value>
                <fullName>Unfunded Subpart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>