force-app/main/default/objects/Product_Distribution__c/fields/Grand_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Product__c</fullName>
    <formula>TEXT(Product__r.Grand_Parent_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Parent Product</label>
    <type>Text</type>
</CustomField>