force-app/main/default/objects/Product_Distribution__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Launch Date field pulled from Product 
SGPRT-624</description>
    <formula>Product__r.Launch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date transaction is launched to the market</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>