force-app/main/default/objects/Product_Distribution__c/fields/Legal_Entity_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_of_Booking__c</fullName>
    <description>Where will the asset be booked? SGPRT-624</description>
    <formula>TEXT(Product__r.Balance_Sheet_of_Booking__c)</formula>
    <inlineHelpText>Where will the asset be booked?</inlineHelpText>
    <label>Legal Entity of Booking</label>
    <type>Text</type>
</CustomField>