force-app/main/default/objects/Product_Distribution__c/fields/List_of_Investors_and_their_appetite_lev__c.field-meta.xml
<CustomField>
    <fullName>List_of_Investors_and_their_appetite_lev__c</fullName>
    <description>List of Investors and their appetite levels</description>
    <inlineHelpText>Input the investors in discussion on the sell down and their expected participation amounts.</inlineHelpText>
    <label>Investors and their appetite levels</label>
    <type>TextArea</type>
</CustomField>