force-app/main/default/objects/Product_Distribution__c/fields/Loan_Profile__c.field-meta.xml
<CustomField>
    <fullName>Loan_Profile__c</fullName>
    <description>Type of loan profile SGPRT-624</description>
    <formula>TEXT(Product__r.Loan_Profile__c )</formula>
    <inlineHelpText>Type of Loan Profile</inlineHelpText>
    <label>Loan Profile</label>
    <type>Text</type>
</CustomField>