force-app/main/default/objects/Product_Distribution__c/fields/Loss_Given_Default_LGD__c.field-meta.xml
<CustomField>
    <fullName>Loss_Given_Default_LGD__c</fullName>
    <description>Applicable transaction LGD %
SGPRT-624</description>
    <formula>Product__r.Loss_Given_Default_LGD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Applicable transaction LGD %</inlineHelpText>
    <label>Loss Given Default (LGD) (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>