force-app/main/default/objects/Product_Distribution__c/fields/Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Type__c</fullName>
    <description>Type of Mandate 
SGPRT-624</description>
    <label>Mandate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Best Efforts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>