force-app/main/default/objects/Product_Distribution__c/fields/Mandated__c.field-meta.xml
<CustomField>
    <fullName>Mandated__c</fullName>
    <formula>Product__r.Mandated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product entering into signed legally binding mandate.</inlineHelpText>
    <label>Mandated</label>
    <type>Checkbox</type>
</CustomField>