force-app/main/default/objects/Product_Distribution__c/fields/Mandated_Distribution_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Distribution_Close_Date__c</fullName>
    <description>The estimated/actual date by which the mandated amount should be distributed OR estimated/actual date of purchase.   SGPRT-624</description>
    <inlineHelpText>The estimated/actual date by which the mandated amount should be distributed OR estimated/actual date of purchase</inlineHelpText>
    <label>Mandated Distribution Close Date</label>
    <type>Date</type>
</CustomField>