force-app/main/default/objects/Product_Distribution__c/fields/Mandated_Ext_Distribution_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Ext_Distribution_Close_Date__c</fullName>
    <description>The date to which the Sell Down Period has been extended.   
SGPRT-624</description>
    <inlineHelpText>The date to which the Sell Down Period has been extended</inlineHelpText>
    <label>Mandated Ext. Distribution Close Date</label>
    <type>Date</type>
</CustomField>