force-app/main/default/objects/Product_Distribution__c/fields/Mandated_Sell_Down_Value__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Sell_Down_Value__c</fullName>
    <inlineHelpText>The sell down amount which has been mandated</inlineHelpText>
    <label>Mandated Sell Down Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>