force-app/main/default/objects/Product_Distribution__c/fields/Margin_skim__c.field-meta.xml
<CustomField>
    <fullName>Margin_skim__c</fullName>
    <label>Margin skim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>