force-app/main/default/objects/Product_Distribution__c/fields/Parent_Product_PP__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_PP__c</fullName>
    <formula>TEXT(Product__r.Parent_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product (PP)</label>
    <type>Text</type>
</CustomField>