force-app/main/default/objects/Product_Distribution__c/fields/Participation_Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Participation_Fee_bps__c</fullName>
    <description>Participation portion of upfront fee expressed in bps, to be earned by SB for availing a participation in the facility.
SGPRT-624</description>
    <formula>Product__r.Participation_Fee_bps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Participation portion of upfront fee expressed in bps, to be earned by SB for availing a participation in the facility</inlineHelpText>
    <label>Participation Fee (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>