force-app/main/default/objects/Product_Distribution__c/fields/Participation_Fee_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Participation_Fee_Guidance__c</fullName>
    <description>Participation Fee guidance/set fee offered to investors for debt syndication expressed in %
SGPRT-624</description>
    <formula>Product__r.Participation_Fee_Guidance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Participation Fee guidance/set fee offered to investors for debt syndication expressed in %</inlineHelpText>
    <label>Participation Fee Guidance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>