force-app/main/default/objects/Product_Distribution__c/fields/Primary_Distribution_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Distribution_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual responsible for execution of this deal</inlineHelpText>
    <label>Primary Distribution Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Primary_Distribution_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>