force-app/main/default/objects/Product_Distribution__c/fields/Primary_Risk_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Change in field name from Credit Manager to Primary Risk Manager.  SGPRT-624</description>
    <label>Primary Risk Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>