force-app/main/default/objects/Product_Distribution__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>SB_Product__c</referenceTo>
    <relationshipLabel>Product Distributions</relationshipLabel>
    <relationshipName>Product_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>