force-app/main/default/objects/Product_Distribution__c/fields/Product_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Comments__c</fullName>
    <description>SGPRT-624</description>
    <formula>Product__r.Product_Comments__c</formula>
    <label>Product Comments</label>
    <type>Text</type>
</CustomField>