force-app/main/default/objects/Product_Distribution__c/fields/Product_Currency__c.field-meta.xml
<CustomField>
    <fullName>Product_Currency__c</fullName>
    <formula>TEXT(Product__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Currency</label>
    <type>Text</type>
</CustomField>